--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: "Outfit", sans-serif;
 }
