--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -6,3 +6,10 @@
 body {
   font-family: "Outfit", sans-serif;
 }
+.container {
+  max-width: 360px;
+  margin: 0 auto;
+}
+.card img {
+  width: 100%;
+}
